<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartHome</string>
    <string name="dinnerroom">Sala</string>
    <string name="kitchen">Cozinha</string>
    <string name="office">Escritório</string>
    <string name="exterior">Exterior</string>
    <string name="bath">WC</string>
    <string name="bedroom">Quarto</string>
    <string name="home">Ínicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="light">Luz</string>
    <string name="watertemperature">Temp. água</string>
    <string name="waterquantity">Quant. água</string>
    <string name="rega">Rega</string>
    <string name="arcondicionado">Ar Condicionado</string>
    <string name="window">Janela</string>
    <color name="white">#FFFFFF</color>

</resources>
