<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_marginTop="60dp"
        android:layout_marginLeft="65dp"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:text="@string/bedroom"
        android:textSize="30sp"
        android:id="@+id/quarto" />

    <Button
        android:layout_marginTop="60dp"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:text="@string/dinnerroom"
        android:textSize="30sp"
        android:id="@+id/sala"
        android:layout_toRightOf="@+id/quarto"
        android:layout_marginLeft="30dp" />

    <Button
        android:layout_marginLeft="65dp"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:text="@string/kitchen"
        android:textSize="30sp"
        android:id="@+id/cozinha"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/quarto" />

    <Button
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:text="@string/bath"
        android:textSize="30sp"
        android:id="@+id/wc"
        android:layout_below="@+id/sala"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/cozinha"
        android:layout_marginLeft="30dp" />

</RelativeLayout>