<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dinnerroom"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@drawable/lampada"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arcondicionado"
        android:id="@+id/lightswitch"
        android:checked="false"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="200dp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/window"
        android:id="@+id/windowswitch"
        android:checked="false"
        android:layout_below="@+id/lightswitch"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="235dp"/>

</RelativeLayout>