<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SeekBar
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_above="@+id/seekBar2"
        android:layout_alignLeft="@+id/seekBar2"
        android:layout_alignStart="@+id/seekBar2"
        android:layout_marginBottom="53dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/watertemperature"
        android:id="@+id/janel"
        android:layout_above="@+id/seekBar2"
        android:layout_alignRight="@+id/tvonoff"
        android:layout_alignEnd="@+id/tvonoff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/waterquantity"
        android:id="@+id/light_bed"
        android:layout_above="@+id/seekBar"
        android:layout_alignLeft="@+id/janel"
        android:layout_alignStart="@+id/janel" />

    <SeekBar
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar2"
        android:indeterminate="false"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/tvonoff"
        android:layout_alignStart="@+id/tvonoff"
        android:layout_marginBottom="113dp" />

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bath"
        android:id="@+id/valueLight" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvonoff"
        android:src="@drawable/lampada"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/valueLight"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView"
        android:layout_toEndOf="@+id/seekBar"
        android:layout_alignBottom="@+id/seekBar"
        android:layout_toRightOf="@+id/seekBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView2"
        android:layout_toEndOf="@+id/valueLight"
        android:layout_alignBottom="@+id/seekBar2"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

</RelativeLayout>